--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Móveis ecológicos">
         <meta name="keywords" content="moveis ecologicos">
 		<link rel="stylesheet" href="estilos.css" />
-		<script src="mensagem.js" />
+		<script src="mensagem.js"> </script>
 		<title>Móveis Ecológicos</title>
     </head>
     <body>
